--- a/Mandelbrot/MandelbrotWidget/MainForm.ui
+++ b/Mandelbrot/MandelbrotWidget/MainForm.ui
@@ -32,6 +32,9 @@
       </item>
       <item>
        <widget class="QPushButton" name="btnStop">
+        <property name="styleSheet">
+         <string notr="true">color: rgb(255, 255, 255);</string>
+        </property>
         <property name="text">
          <string>◼︎</string>
         </property>
@@ -131,10 +134,36 @@
     </widget>
    </item>
    <item>
-    <widget class="QWidget" name="widget_2" native="true"/>
+    <widget class="WidgetGraphic" name="canvasPane" native="true">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="leftMargin">
+       <number>0</number>
+      </property>
+      <property name="topMargin">
+       <number>0</number>
+      </property>
+      <property name="rightMargin">
+       <number>0</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+     </layout>
+    </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>WidgetGraphic</class>
+   <extends>QWidget</extends>
+   <header>WidgetGraphic.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
